--- a/connect.ini
+++ b/connect.ini
@@ -1,6 +1,6 @@
 [loginDB]
 host = localhost
 user = root
-password = kokopepe03
+password =
 db = IT202
 salt = akjdbnjsd34lnifnw2nf298hn34v8t34hnthoeiruhntco834g
